[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minio_pool_goginski"
version = "0.1.2"
description = "MinIO client wrapper with pooling for aioboto3"
authors = [
  { name = "Goginski", email = "georgiy.gus@yandex.ru" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "aioboto3",
  "types-aiobotocore[s3]"
]

[project.urls]
Homepage = "https://github.com/KontoraMarketel/minio-pool-lib"
Repository = "https://github.com/KontoraMarketel/minio-pool-lib"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["minio_pool_goginski*"]
